part-2/y.output
Terminals unused in grammar

   TOKEN_ERRO


Grammar

    0 $accept: programa $end

    1 programa: start

    2 start: new_type start
    3      | global_var start
    4      | func start
    5      | %empty

    6 type: TK_PR_INT
    7     | TK_PR_FLOAT
    8     | TK_PR_BOOL
    9     | TK_PR_CHAR
   10     | TK_PR_STRING

   11 scope: TK_PR_PRIVATE
   12      | TK_PR_PUBLIC
   13      | TK_PR_PROTECTED

   14 var: TK_PR_CONST types TK_IDENTIFICADOR
   15    | types TK_IDENTIFICADOR

   16 types: type
   17      | TK_IDENTIFICADOR

   18 bool: TK_LIT_TRUE
   19     | TK_LIT_FALSE

   20 pipe: TK_OC_FORWARD_PIPE
   21     | TK_OC_BASH_PIPE

   22 new_type: TK_PR_CLASS TK_IDENTIFICADOR '[' param_begin ';'

   23 param_begin: scope param_body
   24            | param_body

   25 param_body: var param_end

   26 param_end: ':' param_begin
   27          | ']'

   28 global_var: TK_IDENTIFICADOR global_var_vec

   29 global_var_vec: '[' index ']' globar_var_begin
   30               | globar_var_begin

   31 globar_var_begin: TK_PR_STATIC global_var_type
   32                 | global_var_type

   33 global_var_type: type ';'
   34                | TK_IDENTIFICADOR ';'

   35 index: TK_LIT_INT
   36      | '+' TK_LIT_INT

   37 func: TK_PR_STATIC func_begin
   38     | func_begin

   39 func_begin: type TK_IDENTIFICADOR '(' func_params
   40           | TK_IDENTIFICADOR TK_IDENTIFICADOR '(' func_params

   41 func_params: ')' func_body
   42            | var func_params_end

   43 func_params_end: ')' func_body
   44                | ',' var func_params_end

   45 func_body: '{' cmd_block

   46 cmd_block: '}'
   47          | cmd cmd_block

   48 cmd: TK_IDENTIFICADOR cmd_id_fix ';'
   49    | if_then ';'
   50    | while ';'
   51    | do_while ';'
   52    | continue ';'
   53    | break ';'
   54    | return ';'
   55    | for ';'
   56    | foreach ';'
   57    | switch ';'
   58    | input ';'
   59    | '{' cmd_block ';'
   60    | output
   61    | case

   62 input: TK_PR_INPUT expr

   63 output: TK_PR_OUTPUT expr output_vals

   64 output_vals: ';'
   65            | ',' expr output_vals

   66 if_then: TK_PR_IF '(' expr ')' TK_PR_THEN '{' cmd_block else

   67 else: TK_PR_ELSE '{' cmd_block
   68     | %empty

   69 while: TK_PR_WHILE '(' expr ')' TK_PR_DO '{' cmd_block

   70 do_while: TK_PR_DO '{' cmd_block TK_PR_WHILE '(' expr ')'

   71 continue: TK_PR_CONTINUE

   72 break: TK_PR_BREAK

   73 return: TK_PR_RETURN expr

   74 for: TK_PR_FOR '(' cmd_for for_fst_list expr ':' cmd_for for_scd_list '{' cmd_block

   75 cmd_for: TK_IDENTIFICADOR cmd_id_fix
   76        | if_then
   77        | while
   78        | do_while
   79        | continue
   80        | break
   81        | return
   82        | for
   83        | foreach
   84        | switch
   85        | input
   86        | TK_PR_OUTPUT expr
   87        | '{' cmd_block

   88 for_fst_list: ',' cmd_for for_fst_list
   89             | ':'

   90 for_scd_list: ',' cmd_for for_scd_list
   91             | ')'

   92 foreach: TK_PR_FOREACH '(' TK_IDENTIFICADOR ':' expr foreach_list '{' cmd_block

   93 foreach_list: ',' expr foreach_list
   94             | ')'

   95 switch: TK_PR_SWITCH '(' expr ')' '{' cmd_block

   96 case: TK_PR_CASE TK_LIT_INT ':'

   97 cmd_id_fix: TK_IDENTIFICADOR
   98           | type var_end
   99           | id_seq attr
  100           | TK_PR_STATIC static_var
  101           | TK_PR_CONST const_var

  102 static_var: TK_PR_CONST const_var
  103           | const_var

  104 const_var: type var_end
  105          | TK_IDENTIFICADOR

  106 var_end: TK_OC_LE expr
  107        | %empty

  108 attr: '=' expr
  109     | TK_OC_SL expr
  110     | TK_OC_SR expr
  111     | piped_expr

  112 piped_expr: pipe un_op TK_IDENTIFICADOR id_seq piped_expr
  113           | %empty

  114 bin_op: '+'
  115       | '-'
  116       | '*'
  117       | '/'
  118       | '%'
  119       | '^'
  120       | '|'
  121       | '&'
  122       | '>'
  123       | '<'
  124       | TK_OC_AND
  125       | TK_OC_OR
  126       | TK_OC_LE
  127       | TK_OC_NE
  128       | TK_OC_EQ
  129       | TK_OC_GE

  130 un_op: not_null_un_op un_op
  131      | %empty

  132 not_null_un_op: '+'
  133               | '-'
  134               | '!'
  135               | '&'
  136               | '*'
  137               | '?'
  138               | '#'

  139 expr: un_op expr_vals expr_begin

  140 expr_begin: bin_op expr
  141           | '?' expr ':' expr
  142           | %empty

  143 expr_vals: TK_LIT_FLOAT
  144          | TK_LIT_INT
  145          | TK_IDENTIFICADOR id_seq piped
  146          | TK_LIT_CHAR
  147          | TK_LIT_STRING
  148          | '(' expr ')'
  149          | bool

  150 piped: %empty
  151      | pipe TK_IDENTIFICADOR id_seq piped_expr

  152 id_seq: '[' expr ']' id_seq_field
  153       | id_seq_field
  154       | '(' func_call_params

  155 id_seq_field: '$' TK_IDENTIFICADOR
  156             | %empty

  157 func_call_params: ')'
  158                 | expr func_call_params_body
  159                 | '.' func_call_params_body

  160 func_call_params_body: ')'
  161                      | ',' func_call_params_end

  162 func_call_params_end: expr func_call_params_body
  163                     | '.' func_call_params_body


Terminals, with rules where they appear

$end (0) 0
'!' (33) 134
'#' (35) 138
'$' (36) 155
'%' (37) 118
'&' (38) 121 135
'(' (40) 39 40 66 69 70 74 92 95 148 154
')' (41) 41 43 66 69 70 91 94 95 148 157 160
'*' (42) 116 136
'+' (43) 36 114 132
',' (44) 44 65 88 90 93 161
'-' (45) 115 133
'.' (46) 159 163
'/' (47) 117
':' (58) 26 74 89 92 96 141
';' (59) 22 33 34 48 49 50 51 52 53 54 55 56 57 58 59 64
'<' (60) 123
'=' (61) 108
'>' (62) 122
'?' (63) 137 141
'[' (91) 22 29 152
']' (93) 27 29 152
'^' (94) 119
'{' (123) 45 59 66 67 69 70 74 87 92 95
'|' (124) 120
'}' (125) 46
error (256)
TK_PR_INT (258) 6
TK_PR_FLOAT (259) 7
TK_PR_BOOL (260) 8
TK_PR_CHAR (261) 9
TK_PR_STRING (262) 10
TK_PR_IF (263) 66
TK_PR_THEN (264) 66
TK_PR_ELSE (265) 67
TK_PR_WHILE (266) 69 70
TK_PR_DO (267) 69 70
TK_PR_INPUT (268) 62
TK_PR_OUTPUT (269) 63 86
TK_PR_RETURN (270) 73
TK_PR_CONST (271) 14 101 102
TK_PR_STATIC (272) 31 37 100
TK_PR_FOREACH (273) 92
TK_PR_FOR (274) 74
TK_PR_SWITCH (275) 95
TK_PR_CASE (276) 96
TK_PR_BREAK (277) 72
TK_PR_CONTINUE (278) 71
TK_PR_CLASS (279) 22
TK_PR_PRIVATE (280) 11
TK_PR_PUBLIC (281) 12
TK_PR_PROTECTED (282) 13
TK_OC_LE (283) 106 126
TK_OC_GE (284) 129
TK_OC_EQ (285) 128
TK_OC_NE (286) 127
TK_OC_AND (287) 124
TK_OC_OR (288) 125
TK_OC_SL (289) 109
TK_OC_SR (290) 110
TK_OC_FORWARD_PIPE (291) 20
TK_OC_BASH_PIPE (292) 21
TK_LIT_INT (293) 35 36 96 144
TK_LIT_FLOAT (294) 143
TK_LIT_FALSE (295) 19
TK_LIT_TRUE (296) 18
TK_LIT_CHAR (297) 146
TK_LIT_STRING (298) 147
TK_IDENTIFICADOR (299) 14 15 17 22 28 34 39 40 48 75 92 97 105 112
    145 151 155
TOKEN_ERRO (300)


Nonterminals, with rules where they appear

$accept (71)
    on left: 0
programa (72)
    on left: 1, on right: 0
start (73)
    on left: 2 3 4 5, on right: 1 2 3 4
type (74)
    on left: 6 7 8 9 10, on right: 16 33 39 98 104
scope (75)
    on left: 11 12 13, on right: 23
var (76)
    on left: 14 15, on right: 25 42 44
types (77)
    on left: 16 17, on right: 14 15
bool (78)
    on left: 18 19, on right: 149
pipe (79)
    on left: 20 21, on right: 112 151
new_type (80)
    on left: 22, on right: 2
param_begin (81)
    on left: 23 24, on right: 22 26
param_body (82)
    on left: 25, on right: 23 24
param_end (83)
    on left: 26 27, on right: 25
global_var (84)
    on left: 28, on right: 3
global_var_vec (85)
    on left: 29 30, on right: 28
globar_var_begin (86)
    on left: 31 32, on right: 29 30
global_var_type (87)
    on left: 33 34, on right: 31 32
index (88)
    on left: 35 36, on right: 29
func (89)
    on left: 37 38, on right: 4
func_begin (90)
    on left: 39 40, on right: 37 38
func_params (91)
    on left: 41 42, on right: 39 40
func_params_end (92)
    on left: 43 44, on right: 42 44
func_body (93)
    on left: 45, on right: 41 43
cmd_block (94)
    on left: 46 47, on right: 45 47 59 66 67 69 70 74 87 92 95
cmd (95)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61, on right: 47
input (96)
    on left: 62, on right: 58 85
output (97)
    on left: 63, on right: 60
output_vals (98)
    on left: 64 65, on right: 63 65
if_then (99)
    on left: 66, on right: 49 76
else (100)
    on left: 67 68, on right: 66
while (101)
    on left: 69, on right: 50 77
do_while (102)
    on left: 70, on right: 51 78
continue (103)
    on left: 71, on right: 52 79
break (104)
    on left: 72, on right: 53 80
return (105)
    on left: 73, on right: 54 81
for (106)
    on left: 74, on right: 55 82
cmd_for (107)
    on left: 75 76 77 78 79 80 81 82 83 84 85 86 87, on right: 74 88
    90
for_fst_list (108)
    on left: 88 89, on right: 74 88
for_scd_list (109)
    on left: 90 91, on right: 74 90
foreach (110)
    on left: 92, on right: 56 83
foreach_list (111)
    on left: 93 94, on right: 92 93
switch (112)
    on left: 95, on right: 57 84
case (113)
    on left: 96, on right: 61
cmd_id_fix (114)
    on left: 97 98 99 100 101, on right: 48 75
static_var (115)
    on left: 102 103, on right: 100
const_var (116)
    on left: 104 105, on right: 101 102 103
var_end (117)
    on left: 106 107, on right: 98 104
attr (118)
    on left: 108 109 110 111, on right: 99
piped_expr (119)
    on left: 112 113, on right: 111 112 151
bin_op (120)
    on left: 114 115 116 117 118 119 120 121 122 123 124 125 126 127
    128 129, on right: 140
un_op (121)
    on left: 130 131, on right: 112 130 139
not_null_un_op (122)
    on left: 132 133 134 135 136 137 138, on right: 130
expr (123)
    on left: 139, on right: 62 63 65 66 69 70 73 74 86 92 93 95 106
    108 109 110 140 141 148 152 158 162
expr_begin (124)
    on left: 140 141 142, on right: 139
expr_vals (125)
    on left: 143 144 145 146 147 148 149, on right: 139
piped (126)
    on left: 150 151, on right: 145
id_seq (127)
    on left: 152 153 154, on right: 99 112 145 151
id_seq_field (128)
    on left: 155 156, on right: 152 153
func_call_params (129)
    on left: 157 158 159, on right: 154
func_call_params_body (130)
    on left: 160 161, on right: 158 159 162 163
func_call_params_end (131)
    on left: 162 163, on right: 161


State 0

    0 $accept: . programa $end

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_STATIC      shift, and go to state 6
    TK_PR_CLASS       shift, and go to state 7
    TK_IDENTIFICADOR  shift, and go to state 8

    $default  reduce using rule 5 (start)

    programa    go to state 9
    start       go to state 10
    type        go to state 11
    new_type    go to state 12
    global_var  go to state 13
    func        go to state 14
    func_begin  go to state 15


State 1

    6 type: TK_PR_INT .

    $default  reduce using rule 6 (type)


State 2

    7 type: TK_PR_FLOAT .

    $default  reduce using rule 7 (type)


State 3

    8 type: TK_PR_BOOL .

    $default  reduce using rule 8 (type)


State 4

    9 type: TK_PR_CHAR .

    $default  reduce using rule 9 (type)


State 5

   10 type: TK_PR_STRING .

    $default  reduce using rule 10 (type)


State 6

   37 func: TK_PR_STATIC . func_begin

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_IDENTIFICADOR  shift, and go to state 16

    type        go to state 11
    func_begin  go to state 17


State 7

   22 new_type: TK_PR_CLASS . TK_IDENTIFICADOR '[' param_begin ';'

    TK_IDENTIFICADOR  shift, and go to state 18


State 8

   28 global_var: TK_IDENTIFICADOR . global_var_vec
   40 func_begin: TK_IDENTIFICADOR . TK_IDENTIFICADOR '(' func_params

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_STATIC      shift, and go to state 19
    TK_IDENTIFICADOR  shift, and go to state 20
    '['               shift, and go to state 21

    type              go to state 22
    global_var_vec    go to state 23
    globar_var_begin  go to state 24
    global_var_type   go to state 25


State 9

    0 $accept: programa . $end

    $end  shift, and go to state 26


State 10

    1 programa: start .

    $default  reduce using rule 1 (programa)


State 11

   39 func_begin: type . TK_IDENTIFICADOR '(' func_params

    TK_IDENTIFICADOR  shift, and go to state 27


State 12

    2 start: new_type . start

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_STATIC      shift, and go to state 6
    TK_PR_CLASS       shift, and go to state 7
    TK_IDENTIFICADOR  shift, and go to state 8

    $default  reduce using rule 5 (start)

    start       go to state 28
    type        go to state 11
    new_type    go to state 12
    global_var  go to state 13
    func        go to state 14
    func_begin  go to state 15


State 13

    3 start: global_var . start

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_STATIC      shift, and go to state 6
    TK_PR_CLASS       shift, and go to state 7
    TK_IDENTIFICADOR  shift, and go to state 8

    $default  reduce using rule 5 (start)

    start       go to state 29
    type        go to state 11
    new_type    go to state 12
    global_var  go to state 13
    func        go to state 14
    func_begin  go to state 15


State 14

    4 start: func . start

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_STATIC      shift, and go to state 6
    TK_PR_CLASS       shift, and go to state 7
    TK_IDENTIFICADOR  shift, and go to state 8

    $default  reduce using rule 5 (start)

    start       go to state 30
    type        go to state 11
    new_type    go to state 12
    global_var  go to state 13
    func        go to state 14
    func_begin  go to state 15


State 15

   38 func: func_begin .

    $default  reduce using rule 38 (func)


State 16

   40 func_begin: TK_IDENTIFICADOR . TK_IDENTIFICADOR '(' func_params

    TK_IDENTIFICADOR  shift, and go to state 31


State 17

   37 func: TK_PR_STATIC func_begin .

    $default  reduce using rule 37 (func)


State 18

   22 new_type: TK_PR_CLASS TK_IDENTIFICADOR . '[' param_begin ';'

    '['  shift, and go to state 32


State 19

   31 globar_var_begin: TK_PR_STATIC . global_var_type

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_IDENTIFICADOR  shift, and go to state 33

    type             go to state 22
    global_var_type  go to state 34


State 20

   34 global_var_type: TK_IDENTIFICADOR . ';'
   40 func_begin: TK_IDENTIFICADOR TK_IDENTIFICADOR . '(' func_params

    ';'  shift, and go to state 35
    '('  shift, and go to state 36


State 21

   29 global_var_vec: '[' . index ']' globar_var_begin

    TK_LIT_INT  shift, and go to state 37
    '+'         shift, and go to state 38

    index  go to state 39


State 22

   33 global_var_type: type . ';'

    ';'  shift, and go to state 40


State 23

   28 global_var: TK_IDENTIFICADOR global_var_vec .

    $default  reduce using rule 28 (global_var)


State 24

   30 global_var_vec: globar_var_begin .

    $default  reduce using rule 30 (global_var_vec)


State 25

   32 globar_var_begin: global_var_type .

    $default  reduce using rule 32 (globar_var_begin)


State 26

    0 $accept: programa $end .

    $default  accept


State 27

   39 func_begin: type TK_IDENTIFICADOR . '(' func_params

    '('  shift, and go to state 41


State 28

    2 start: new_type start .

    $default  reduce using rule 2 (start)


State 29

    3 start: global_var start .

    $default  reduce using rule 3 (start)


State 30

    4 start: func start .

    $default  reduce using rule 4 (start)


State 31

   40 func_begin: TK_IDENTIFICADOR TK_IDENTIFICADOR . '(' func_params

    '('  shift, and go to state 36


State 32

   22 new_type: TK_PR_CLASS TK_IDENTIFICADOR '[' . param_begin ';'

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_CONST       shift, and go to state 42
    TK_PR_PRIVATE     shift, and go to state 43
    TK_PR_PUBLIC      shift, and go to state 44
    TK_PR_PROTECTED   shift, and go to state 45
    TK_IDENTIFICADOR  shift, and go to state 46

    type         go to state 47
    scope        go to state 48
    var          go to state 49
    types        go to state 50
    param_begin  go to state 51
    param_body   go to state 52


State 33

   34 global_var_type: TK_IDENTIFICADOR . ';'

    ';'  shift, and go to state 35


State 34

   31 globar_var_begin: TK_PR_STATIC global_var_type .

    $default  reduce using rule 31 (globar_var_begin)


State 35

   34 global_var_type: TK_IDENTIFICADOR ';' .

    $default  reduce using rule 34 (global_var_type)


State 36

   40 func_begin: TK_IDENTIFICADOR TK_IDENTIFICADOR '(' . func_params

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_CONST       shift, and go to state 42
    TK_IDENTIFICADOR  shift, and go to state 46
    ')'               shift, and go to state 53

    type         go to state 47
    var          go to state 54
    types        go to state 50
    func_params  go to state 55


State 37

   35 index: TK_LIT_INT .

    $default  reduce using rule 35 (index)


State 38

   36 index: '+' . TK_LIT_INT

    TK_LIT_INT  shift, and go to state 56


State 39

   29 global_var_vec: '[' index . ']' globar_var_begin

    ']'  shift, and go to state 57


State 40

   33 global_var_type: type ';' .

    $default  reduce using rule 33 (global_var_type)


State 41

   39 func_begin: type TK_IDENTIFICADOR '(' . func_params

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_CONST       shift, and go to state 42
    TK_IDENTIFICADOR  shift, and go to state 46
    ')'               shift, and go to state 53

    type         go to state 47
    var          go to state 54
    types        go to state 50
    func_params  go to state 58


State 42

   14 var: TK_PR_CONST . types TK_IDENTIFICADOR

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_IDENTIFICADOR  shift, and go to state 46

    type   go to state 47
    types  go to state 59


State 43

   11 scope: TK_PR_PRIVATE .

    $default  reduce using rule 11 (scope)


State 44

   12 scope: TK_PR_PUBLIC .

    $default  reduce using rule 12 (scope)


State 45

   13 scope: TK_PR_PROTECTED .

    $default  reduce using rule 13 (scope)


State 46

   17 types: TK_IDENTIFICADOR .

    $default  reduce using rule 17 (types)


State 47

   16 types: type .

    $default  reduce using rule 16 (types)


State 48

   23 param_begin: scope . param_body

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_CONST       shift, and go to state 42
    TK_IDENTIFICADOR  shift, and go to state 46

    type        go to state 47
    var         go to state 49
    types       go to state 50
    param_body  go to state 60


State 49

   25 param_body: var . param_end

    ':'  shift, and go to state 61
    ']'  shift, and go to state 62

    param_end  go to state 63


State 50

   15 var: types . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 64


State 51

   22 new_type: TK_PR_CLASS TK_IDENTIFICADOR '[' param_begin . ';'

    ';'  shift, and go to state 65


State 52

   24 param_begin: param_body .

    $default  reduce using rule 24 (param_begin)


State 53

   41 func_params: ')' . func_body

    '{'  shift, and go to state 66

    func_body  go to state 67


State 54

   42 func_params: var . func_params_end

    ')'  shift, and go to state 68
    ','  shift, and go to state 69

    func_params_end  go to state 70


State 55

   40 func_begin: TK_IDENTIFICADOR TK_IDENTIFICADOR '(' func_params .

    $default  reduce using rule 40 (func_begin)


State 56

   36 index: '+' TK_LIT_INT .

    $default  reduce using rule 36 (index)


State 57

   29 global_var_vec: '[' index ']' . globar_var_begin

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_STATIC      shift, and go to state 19
    TK_IDENTIFICADOR  shift, and go to state 33

    type              go to state 22
    globar_var_begin  go to state 71
    global_var_type   go to state 25


State 58

   39 func_begin: type TK_IDENTIFICADOR '(' func_params .

    $default  reduce using rule 39 (func_begin)


State 59

   14 var: TK_PR_CONST types . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 72


State 60

   23 param_begin: scope param_body .

    $default  reduce using rule 23 (param_begin)


State 61

   26 param_end: ':' . param_begin

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_CONST       shift, and go to state 42
    TK_PR_PRIVATE     shift, and go to state 43
    TK_PR_PUBLIC      shift, and go to state 44
    TK_PR_PROTECTED   shift, and go to state 45
    TK_IDENTIFICADOR  shift, and go to state 46

    type         go to state 47
    scope        go to state 48
    var          go to state 49
    types        go to state 50
    param_begin  go to state 73
    param_body   go to state 52


State 62

   27 param_end: ']' .

    $default  reduce using rule 27 (param_end)


State 63

   25 param_body: var param_end .

    $default  reduce using rule 25 (param_body)


State 64

   15 var: types TK_IDENTIFICADOR .

    $default  reduce using rule 15 (var)


State 65

   22 new_type: TK_PR_CLASS TK_IDENTIFICADOR '[' param_begin ';' .

    $default  reduce using rule 22 (new_type)


State 66

   45 func_body: '{' . cmd_block

    TK_PR_IF          shift, and go to state 74
    TK_PR_WHILE       shift, and go to state 75
    TK_PR_DO          shift, and go to state 76
    TK_PR_INPUT       shift, and go to state 77
    TK_PR_OUTPUT      shift, and go to state 78
    TK_PR_RETURN      shift, and go to state 79
    TK_PR_FOREACH     shift, and go to state 80
    TK_PR_FOR         shift, and go to state 81
    TK_PR_SWITCH      shift, and go to state 82
    TK_PR_CASE        shift, and go to state 83
    TK_PR_BREAK       shift, and go to state 84
    TK_PR_CONTINUE    shift, and go to state 85
    TK_IDENTIFICADOR  shift, and go to state 86
    '{'               shift, and go to state 87
    '}'               shift, and go to state 88

    cmd_block  go to state 89
    cmd        go to state 90
    input      go to state 91
    output     go to state 92
    if_then    go to state 93
    while      go to state 94
    do_while   go to state 95
    continue   go to state 96
    break      go to state 97
    return     go to state 98
    for        go to state 99
    foreach    go to state 100
    switch     go to state 101
    case       go to state 102


State 67

   41 func_params: ')' func_body .

    $default  reduce using rule 41 (func_params)


State 68

   43 func_params_end: ')' . func_body

    '{'  shift, and go to state 66

    func_body  go to state 103


State 69

   44 func_params_end: ',' . var func_params_end
